[package]
name = "tmux-lazy-session"
version = "0.1.0"
authors = ["Ingar Almklov <ingara@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0.41"
sha-1 = "0.9.6"
log = "0.4.0"
env_logger = "0.8.4"
