[package]
name = "tmux-lazy-session"
version = "0.1.0"
authors = ["Ingar Almklov <ingara@gmail.com>"]
description = "Tmux sessions for lazy people"
readme = "README.md"
homepage = "https://github.com/ingara/tmux-lazy-session"
repository = "https://github.com/ingara/tmux-lazy-session"
keywords = ["cli", "tmux"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0.41"
sha-1 = "0.9.6"
log = "0.4.0"
env_logger = "0.8.4"
